kubernetes/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  namespace: python-app
  labels:
    app: python
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python-app
          image: sweaty1111/python-app:6eca6f014c3432970f758510a97892935f6a4eae
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
